# complete-translation

./: README.md  pyproject.toml
notebook/: index.ipynb
src/: go.mod  go.sum  main.go
src/cmd/: interleave.go  replace.go  root.go  translate.go
src/internal/: translate_test.go
src/internal/document/: document.go  document_test.go
src/lib/: translation.py
